// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injects imports 1`] = `
Object {
  "dependencies": Object {
    "pkg-c": "^3.0.0",
    "provider$pkg-a": "^1.0.0",
    "provider$pkg-b": "^2.0.0",
    "root$pkg-a": "^1.0.0",
    "root$pkg-b": "^2.0.0",
    "root$pkg-c": "^3.0.0",
  },
  "name": "package",
  "version": "2.0.0",
}
`;

exports[`injects imports even when not present in package.json 1`] = `
Object {
  "dependencies": Object {
    "provider$pkg-a": "^1.0.0",
  },
  "name": "package",
  "version": "2.0.0",
}
`;

exports[`logs results correctly 1`] = `
Array [
  Object {
    "level": "info",
    "source": "inject-imports-dependencies",
    "things": Array [
      "Injected dependency",
      "provider$pkg-a@^1.0.0",
    ],
  },
  Object {
    "level": "info",
    "source": "inject-imports-dependencies",
    "things": Array [
      "Injected dependency",
      "provider$pkg-b@^3.0.0",
      "(however, note that the same dependency in package.json",
      "has different constraints:",
      "root$pkg-b@^2.0.0)",
    ],
  },
  Object {
    "level": "info",
    "source": "inject-imports-dependencies",
    "things": Array [
      "Injected dependency",
      "pkg-c@^3.0.0",
    ],
  },
]
`;
